refactor: Refactor packages